# trustgrant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
crates/trustgrant/: Cargo.toml  README.md
crates/trustgrant-discovery/: Cargo.toml  README.md
crates/trustgrant-discovery/src/: document.rs  lib.rs  source_document.rs
crates/trustgrant-discovery/tests/: discovery_empty_keys_rejected.rs
crates/trustgrant-document/: Cargo.toml  README.md
crates/trustgrant-document/src/: lib.rs  ownership_transition.rs  raw.rs  validated.rs
crates/trustgrant-domain/: Cargo.toml  README.md
crates/trustgrant-domain/src/: authority.rs  canonicalization.rs  ids.rs  lib.rs  lineage.rs  names.rs  ownership.rs  selector_expression.rs
crates/trustgrant-domain/tests/: authority_roundtrip_crashes.rs
crates/trustgrant-error/: Cargo.toml  README.md
crates/trustgrant-error/src/: lib.rs  limits.rs  trustgrant.rs
crates/trustgrant-evaluate/: Cargo.toml  README.md
crates/trustgrant-evaluate/src/: decision.rs  engine.rs  execution.rs  kani.rs  lib.rs  request.rs
crates/trustgrant-issue/: Cargo.toml  README.md
crates/trustgrant-issue/src/: draft.rs  lib.rs
crates/trustgrant-ownership/: Cargo.toml  README.md
crates/trustgrant-ownership/src/: canonicalize.rs  chain.rs  lib.rs  verify.rs
crates/trustgrant-ports/: Cargo.toml  README.md
crates/trustgrant-ports/src/: discovery_source.rs  lib.rs  revocation_source.rs  signature.rs  storage_source.rs  verification.rs
crates/trustgrant-revocation/: Cargo.toml  README.md
crates/trustgrant-revocation/src/: lib.rs  proof.rs  status.rs
crates/trustgrant-verify/: Cargo.toml  README.md
crates/trustgrant-verify/src/: bundle.rs  canonicalize.rs  consistency.rs  lib.rs  pipeline.rs  policy.rs  record.rs  signature.rs  verified_grant.rs
crates/trustgrant/benches/: trustgrant_core.rs
crates/trustgrant/docs/: CANONICALIZATION_SPECIALIZATION.md  ERROR_BOUNDARIES.md  IMPLEMENTATION_ARCHITECTURE.md  INTEROPERABILITY_AND_PROOF_MODELS.md  OWNERSHIP_AUTHORITY_TRANSITIONS.md  PERFORMANCE_BASELINE.md  README.md  TRUSTGRANT_FEDERATION_FLOW.md  TRUSTGRANT_V0_SPEC.md  TYPE_AND_TRAIT_DESIGN.md
crates/trustgrant/examples/: canonicalize_cold_path.rs  evaluate_hot_path.rs  issue_signable_cold_path.rs  issue_signed_cold_path.rs  ownership_transition_canonicalize_cold_path.rs  ownership_transition_verify_cold_path.rs  parse_raw_document_cold_path.rs  proof_bundle_assembly_cold_path.rs  proof_source_lookup_cold_path.rs  rehydrate_verified_record_cold_path.rs  verify_cold_path.rs
crates/trustgrant/src/: lib.rs
crates/trustgrant/tests/: advanced_scenarios.rs  atomic_executor.rs  conformance.rs  conformance_vectors.rs  document_validation.rs  e2e_real_signatures.rs  error_scenarios.rs  evaluation.rs  interop.rs  issue_verify_evaluate.rs  offline_posture.rs  ownership_transition_pipeline.rs  proof_sources.rs  property_tests.rs  rehydrate_evaluate.rs  storage_source.rs
docs/: BASELINE_INTEROPERABILITY_PROFILE.md  CANONICALIZATION_SPECIALIZATION.md  ERROR_BOUNDARIES.md  IMPLEMENTATION_ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_GUIDE.md  INTEROPERABILITY_AND_PROOF_MODELS.md  NON_GOALS.md  OWNERSHIP_AUTHORITY_TRANSITIONS.md  PERFORMANCE_BASELINE.md  README.md  TRACING_GUIDE.md  TRUSTGRANT_AUTHORITY_DISCOVERY.md  TRUSTGRANT_FEDERATION_FLOW.md  TRUSTGRANT_OWNERSHIP_AUTHORITY_TRANSITION_V0_SCHEMA.json  TRUSTGRANT_V0_SCHEMA_FINAL_WITH_KEY_ID.json  TRUSTGRANT_V0_SPEC.md  TYPE_AND_TRAIT_DESIGN.md  USE_CASES.md  interop.md
fuzz/: .gitignore  Cargo.toml  crash-2e7c062ac2e81317e638b68b4c233c045abd4133  start_all_fuzz.sh
fuzz/fuzz_targets/: fuzz_authority_id.rs  fuzz_authority_scheme.rs  fuzz_bundle_proof_parse.rs  fuzz_canonicalize.rs  fuzz_canonicalize_transition.rs  fuzz_delegated_principal_parse.rs  fuzz_discovery_inner_types.rs  fuzz_discovery_parse.rs  fuzz_document_roundtrip.rs  fuzz_document_validate_options.rs  fuzz_domain_names.rs  fuzz_draft_serialize.rs  fuzz_enum_serde.rs  fuzz_evaluation_engine.rs  fuzz_grant_lineage.rs  fuzz_metadata_consistency.rs  fuzz_mutation_request.rs  fuzz_ownership_chain_verify.rs  fuzz_ownership_transition_parse.rs  fuzz_ownership_transition_verify.rs  fuzz_revocation_proof_parse.rs  fuzz_revocation_state.rs  fuzz_selector_context.rs  fuzz_selector_expression_parse.rs  fuzz_selector_kind.rs  fuzz_trustgrant_document_parse.rs  fuzz_trustgrant_document_validate.rs  fuzz_verification_pipeline.rs  fuzz_verification_policy.rs  fuzz_verified_record.rs
fuzz/regression/: README.md  crash-18ecf6319ad8d223df5979d026e36384c0f6efbb
interop/: IMPLEMENTATION_GUIDE.md  README.md
interop/go/: go.mod  interop_test.go
kani-proofs/: Cargo.toml
kani-proofs/src/: lib.rs  selector_match.rs
tests/conformance/vectors/: s12_01_minting_constraints_zero_values.json  s13_01_origin_authority_enforcement.json  s2_5_01_revision_zero_rejected.json  s2_5_02_self_supersession_rejected.json  s2_5_03_supersession_policy_values.json  s2_5_04_supersedes_on_first_revision_rejected.json  s4_01_required_fields.json  s4_02_missing_signature_rejected.json  s4_03_revocation_endpoint_url.json  s4_04_empty_trustgrant_id_rejected.json  s4_05_empty_issuer_authority_rejected.json  s4_06_invalid_protocol_version_rejected.json  s4_07_invalid_trustgrant_id_rejected.json  s4_08_inverted_time_window_rejected.json  s4_09_invalid_authority_id_rejected.json  s4_10_empty_key_id_rejected.json  s5_01_target_scope_all_true_allow_null.json  s5_02_target_scope_all_true_with_allow_rejected.json  s5_03_target_scope_all_false_allow_non_empty.json  s5_04_target_scope_all_false_empty_allow_rejected.json  s5_05_target_scope_deny_null.json  s5_06_target_scope_deny_non_empty.json  s5_target_scope_all_true_allow_rejected.json  s6_01_resource_type_key_present.json  s6_02_resource_scope_all_true_allow_null.json  s6_03_resource_scope_all_false_allow_non_empty.json  s6_1_01_operations_null_v0_compat.json  (+21 more)
(+42 files in other folders)
