[workspace]
resolver = "3"
members = ["crates/*", "fuzz", "kani-proofs"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/STEXS-Technologies/trustgrant"
description = "A selector-based, certificate-driven protocol for decentralized delegation of authority over resources and operations across independent systems."
homepage = "https://github.com/STEXS-Technologies/trustgrant"
documentation = "https://docs.rs/trustgrant"
keywords = ["authorization", "delegation", "cryptography", "authority", "grants"]
categories = ["authentication", "cryptography", "rust-patterns"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

# Profile for real-workload profiling with perf / flamegraphs.
# Inherits release optimisations but keeps symbol tables so perf can
# resolve Rust function names.  Frame pointers are enabled globally
# via .cargo/config.toml.
[profile.profiling]
inherits = "release"
strip = "none"
debug = 1

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true
incremental = false
panic = "unwind"
lto = false

[workspace.dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
compact_str = { version = "0.9", features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.147", default-features = false, features = ["std"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }

[workspace.lints.rust]
rust_2024_prelude_collisions = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
deprecated_safe_2024 = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
inefficient_to_string = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
result_large_err = "deny"
map_err_ignore = "deny"
unreachable = "deny"
dbg_macro = "deny"
ignored_unit_patterns = "deny"
await_holding_refcell_ref = "deny"
match_bool = "deny"
if_same_then_else = "deny"
needless_pass_by_value = "deny"
borrowed_box = "deny"
str_to_string = "deny"
filter_map_next = "deny"
iter_not_returning_iterator = "deny"
needless_collect = "deny"
wildcard_enum_match_arm = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
undocumented_unsafe_blocks = "deny"
let_underscore_must_use = "deny"
must_use_candidate = "deny"
match_wild_err_arm = "deny"
indexing_slicing = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
disallowed_macros = "deny"
missing_const_for_fn = "deny"
implicit_clone = "deny"
redundant_clone = "deny"
lossy_float_literal = "deny"
unnecessary_wraps = "deny"
map_flatten = "deny"
or_fun_call = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
wildcard_dependencies = "deny"
enum_glob_use = "deny"
match_ref_pats = "deny"
wrong_self_convention = "deny"
trivially_copy_pass_by_ref = "deny"
ptr_arg = "deny"
needless_lifetimes = "deny"
mutable_key_type = "deny"
large_enum_variant = "deny"
vec_box = "deny"
float_cmp = "deny"
bool_assert_comparison = "deny"
cmp_owned = "deny"
string_add = "deny"
assertions_on_constants = "deny"
useless_asref = "deny"
shadow_unrelated = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"
box_collection = "deny"
unnecessary_box_returns = "deny"
trait_duplication_in_bounds = "deny"
single_char_lifetime_names = "deny"
format_push_string = "deny"
option_if_let_else = "deny"
manual_string_new = "deny"
flat_map_option = "deny"
