[package]
name = "trustgrant-fuzz"
version = "0.0.0"
authors = ["Automated"]
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json.workspace = true
chrono.workspace = true

[dependencies.trustgrant]
path = "../crates/trustgrant"
features = []

[[bin]]
name = "fuzz_trustgrant_document_parse"
path = "fuzz_targets/fuzz_trustgrant_document_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trustgrant_document_validate"
path = "fuzz_targets/fuzz_trustgrant_document_validate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_discovery_parse"
path = "fuzz_targets/fuzz_discovery_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_delegated_principal_parse"
path = "fuzz_targets/fuzz_delegated_principal_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_revocation_proof_parse"
path = "fuzz_targets/fuzz_revocation_proof_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonicalize"
path = "fuzz_targets/fuzz_canonicalize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_selector_expression_parse"
path = "fuzz_targets/fuzz_selector_expression_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ownership_transition_parse"
path = "fuzz_targets/fuzz_ownership_transition_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ownership_transition_verify"
path = "fuzz_targets/fuzz_ownership_transition_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_authority_id"
path = "fuzz_targets/fuzz_authority_id.rs"
test = false
doc = false

[[bin]]
name = "fuzz_selector_kind"
path = "fuzz_targets/fuzz_selector_kind.rs"
test = false
doc = false

[[bin]]
name = "fuzz_verification_pipeline"
path = "fuzz_targets/fuzz_verification_pipeline.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ownership_chain_verify"
path = "fuzz_targets/fuzz_ownership_chain_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_evaluation_engine"
path = "fuzz_targets/fuzz_evaluation_engine.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bundle_proof_parse"
path = "fuzz_targets/fuzz_bundle_proof_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_draft_serialize"
path = "fuzz_targets/fuzz_draft_serialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_domain_names"
path = "fuzz_targets/fuzz_domain_names.rs"
test = false
doc = false

[[bin]]
name = "fuzz_authority_scheme"
path = "fuzz_targets/fuzz_authority_scheme.rs"
test = false
doc = false

[[bin]]
name = "fuzz_revocation_state"
path = "fuzz_targets/fuzz_revocation_state.rs"
test = false
doc = false

[[bin]]
name = "fuzz_selector_context"
path = "fuzz_targets/fuzz_selector_context.rs"
test = false
doc = false

[[bin]]
name = "fuzz_grant_lineage"
path = "fuzz_targets/fuzz_grant_lineage.rs"
test = false
doc = false

[[bin]]
name = "fuzz_document_roundtrip"
path = "fuzz_targets/fuzz_document_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_metadata_consistency"
path = "fuzz_targets/fuzz_metadata_consistency.rs"
test = false
doc = false

[[bin]]
name = "fuzz_verification_policy"
path = "fuzz_targets/fuzz_verification_policy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mutation_request"
path = "fuzz_targets/fuzz_mutation_request.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonicalize_transition"
path = "fuzz_targets/fuzz_canonicalize_transition.rs"
test = false
doc = false

[[bin]]
name = "fuzz_discovery_inner_types"
path = "fuzz_targets/fuzz_discovery_inner_types.rs"
test = false
doc = false

[[bin]]
name = "fuzz_verified_record"
path = "fuzz_targets/fuzz_verified_record.rs"
test = false
doc = false

[[bin]]
name = "fuzz_document_validate_options"
path = "fuzz_targets/fuzz_document_validate_options.rs"
test = false
doc = false

[[bin]]
name = "fuzz_enum_serde"
path = "fuzz_targets/fuzz_enum_serde.rs"
test = false
doc = false
