[package]
name = "trustgrant-discovery"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-document = { path = "../trustgrant-document" }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.147", default-features = false, features = ["std"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
compact_str = { version = "0.9", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "js"] }

[lints]
workspace = true
