[package]
name = "trustgrant-discovery"
version = "0.1.0"
edition.workspace = true
description = "Authority discovery document parsing and signer binding resolution"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-document = { path = "../trustgrant-document" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
compact_str.workspace = true
uuid = { workspace = true, features = ["serde", "js"] }

[lints]
workspace = true
