[package]
name = "trustgrant-discovery"
version = "0.1.0"
edition.workspace = true
description = "Authority discovery document parsing and signer binding resolution"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error", version = "0.1.0" }
trustgrant-domain = { path = "../trustgrant-domain", version = "0.1.0" }
trustgrant-document = { path = "../trustgrant-document", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
compact_str.workspace = true
uuid = { workspace = true, features = ["serde", "js"] }

[lints]
workspace = true
