[package]
name = "trustgrant-document"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.147", default-features = false, features = ["std"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
compact_str = { version = "0.9", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[lints]
workspace = true
