[package]
name = "trustgrant-document"
version = "0.1.0"
edition.workspace = true
description = "TrustGrant document parsing, validation, normalization, and JSON schema types"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
compact_str.workspace = true
uuid = { workspace = true, features = ["serde", "js"] }

[lints]
workspace = true
