[package]
name = "trustgrant-domain"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
trustgrant-error = { path = "../trustgrant-error" }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = { version = "1.0.147", default-features = false, features = ["std"] }

[lints]
workspace = true
