[package]
name = "trustgrant-domain"
version = "0.1.0"
edition.workspace = true
description = "Core domain types for the TrustGrant protocol (authority IDs, selector kinds, principal IDs, operation names)"
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
trustgrant-error = { path = "../trustgrant-error" }
url.workspace = true
uuid = { workspace = true, features = ["serde", "js"] }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
