[package]
name = "trustgrant-error"
version = "0.1.0"
edition.workspace = true
description = "Error types for the TrustGrant delegation protocol"
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { version = "2.0.18", default-features = false }

[lints]
workspace = true
