[package]
name = "trustgrant-evaluate"
version = "0.1.0"
edition.workspace = true
description = "Hot-path evaluation engine for TrustGrant grants"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-ports = { path = "../trustgrant-ports" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
trustgrant-verify = { path = "../trustgrant-verify" }
chrono.workspace = true
tracing = { version = "0.1", default-features = false, features = ["std"] }
uuid.workspace = true

[lints]
workspace = true
