[package]
name = "trustgrant-evaluate"
version = "0.1.0"
edition.workspace = true
description = "Hot-path evaluation engine for TrustGrant grants"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-discovery = { path = "../trustgrant-discovery", version = "0.1.0" }
trustgrant-document = { path = "../trustgrant-document", version = "0.1.0" }
trustgrant-domain = { path = "../trustgrant-domain", version = "0.1.0" }
trustgrant-error = { path = "../trustgrant-error", version = "0.1.0" }
trustgrant-ports = { path = "../trustgrant-ports", version = "0.1.0" }
trustgrant-revocation = { path = "../trustgrant-revocation", version = "0.1.0" }
trustgrant-verify = { path = "../trustgrant-verify", version = "0.1.0" }
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
