[package]
name = "trustgrant-issue"
version = "0.1.0"
edition.workspace = true
description = "Draft and signable TrustGrant document construction"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-verify = { path = "../trustgrant-verify" }
chrono.workspace = true
compact_str = "0.9"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
