[package]
name = "trustgrant-issue"
version = "0.1.0"
edition.workspace = true
description = "Draft and signable TrustGrant document construction"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-document = { path = "../trustgrant-document", version = "0.1.0" }
trustgrant-domain = { path = "../trustgrant-domain", version = "0.1.0" }
trustgrant-error = { path = "../trustgrant-error", version = "0.1.0" }
trustgrant-verify = { path = "../trustgrant-verify", version = "0.1.0" }
chrono.workspace = true
compact_str = "0.9"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
