[package]
name = "trustgrant-ownership"
version = "0.1.0"
edition.workspace = true
description = "Ownership authority transition verification for the TrustGrant protocol"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-ports = { path = "../trustgrant-ports" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
compact_str = { version = "0.9", features = ["serde"] }
itoa = { version = "1.0.15", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.147", default-features = false, features = ["std"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "js"] }

[dev-dependencies]
serde_jcs = { version = "0.2.0", default-features = false }

[lints]
workspace = true
