[package]
name = "trustgrant-ownership"
version = "0.1.0"
edition.workspace = true
description = "Ownership authority transition verification for the TrustGrant protocol"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-ports = { path = "../trustgrant-ports" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
chrono.workspace = true
compact_str.workspace = true
itoa.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["serde", "js"] }

[dev-dependencies]
serde_jcs.workspace = true

[lints]
workspace = true
