[package]
name = "trustgrant-ports"
version = "0.1.0"
edition.workspace = true
description = "Backend-agnostic port traits for the TrustGrant protocol (storage, discovery, revocation sources)"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde", "std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }

[dev-dependencies]
serde_json = { version = "1.0.147", default-features = false, features = ["std"] }

[lints]
workspace = true
