[package]
name = "trustgrant-ports"
version = "0.1.0"
edition.workspace = true
description = "Backend-agnostic port traits for the TrustGrant protocol (storage, discovery, revocation sources)"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
