[package]
name = "trustgrant-revocation"
version = "0.1.0"
edition.workspace = true
description = "Revocation state management and proof verification for the TrustGrant protocol"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-domain = { path = "../trustgrant-domain" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[lints]
workspace = true
