[package]
name = "trustgrant-revocation"
version = "0.1.0"
edition.workspace = true
description = "Revocation state management and proof verification for the TrustGrant protocol"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-error = { path = "../trustgrant-error", version = "0.1.0" }
trustgrant-domain = { path = "../trustgrant-domain", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[lints]
workspace = true
