[package]
name = "trustgrant-verify"
version = "0.1.0"
edition.workspace = true
description = "Cold-path verification pipeline for the TrustGrant protocol"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-ownership = { path = "../trustgrant-ownership" }
trustgrant-ports = { path = "../trustgrant-ports" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
chrono.workspace = true
compact_str = "0.9"
itoa = { version = "1.0.15", default-features = false }
serde.workspace = true
serde_jcs = { version = "0.2.0", default-features = false }
serde_json.workspace = true
tracing = { version = "0.1", default-features = false, features = ["std"] }
uuid = { workspace = true, features = ["serde", "js"] }

[lints]
workspace = true
