[package]
name = "trustgrant-verify"
version = "0.1.0"
edition.workspace = true
description = "Cold-path verification pipeline for the TrustGrant protocol"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-discovery = { path = "../trustgrant-discovery", version = "0.1.0" }
trustgrant-document = { path = "../trustgrant-document", version = "0.1.0" }
trustgrant-domain = { path = "../trustgrant-domain", version = "0.1.0" }
trustgrant-error = { path = "../trustgrant-error", version = "0.1.0" }
trustgrant-ownership = { path = "../trustgrant-ownership", version = "0.1.0" }
trustgrant-ports = { path = "../trustgrant-ports", version = "0.1.0" }
trustgrant-revocation = { path = "../trustgrant-revocation", version = "0.1.0" }
chrono.workspace = true
compact_str = "0.9"
itoa.workspace = true
serde.workspace = true
serde_jcs.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "js"] }

[lints]
workspace = true
