[package]
name = "trustgrant"
version = "0.1.0"
edition.workspace = true
description = "Facade crate re-exporting all TrustGrant protocol types for convenience"
license.workspace = true
repository.workspace = true

[dependencies]
trustgrant-discovery = { path = "../trustgrant-discovery" }
trustgrant-document = { path = "../trustgrant-document" }
trustgrant-domain = { path = "../trustgrant-domain" }
trustgrant-error = { path = "../trustgrant-error" }
trustgrant-evaluate = { path = "../trustgrant-evaluate" }
trustgrant-issue = { path = "../trustgrant-issue" }
trustgrant-ownership = { path = "../trustgrant-ownership" }
trustgrant-ports = { path = "../trustgrant-ports" }
trustgrant-revocation = { path = "../trustgrant-revocation" }
trustgrant-verify = { path = "../trustgrant-verify" }

[dev-dependencies]
chrono.workspace = true
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
proptest = "1.4"
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
ed25519-dalek = { version = "2", features = ["pem"] }
hex = "0.4"
rand = "0.8"

[lints]
workspace = true

[[bench]]
name = "trustgrant_core"
harness = false
