[package]
name = "trustgrant"
version = "0.1.0"
edition.workspace = true
description = "Facade crate re-exporting all TrustGrant protocol types for convenience"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
trustgrant-discovery = { path = "../trustgrant-discovery", version = "0.1.0" }
trustgrant-document = { path = "../trustgrant-document", version = "0.1.0" }
trustgrant-domain = { path = "../trustgrant-domain", version = "0.1.0" }
trustgrant-error = { path = "../trustgrant-error", version = "0.1.0" }
trustgrant-evaluate = { path = "../trustgrant-evaluate", version = "0.1.0" }
trustgrant-issue = { path = "../trustgrant-issue", version = "0.1.0" }
trustgrant-ownership = { path = "../trustgrant-ownership", version = "0.1.0" }
trustgrant-ports = { path = "../trustgrant-ports", version = "0.1.0" }
trustgrant-revocation = { path = "../trustgrant-revocation", version = "0.1.0" }
trustgrant-verify = { path = "../trustgrant-verify", version = "0.1.0" }

[dev-dependencies]
chrono.workspace = true
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
proptest = "1.4"
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
ed25519-dalek = { version = "2", features = ["pem"] }
hex = "0.4"
rand = "0.8"

[lints]
workspace = true

[[bench]]
name = "trustgrant_core"
harness = false
